# Disk-Spy

./: .gitignore  Cargo.toml  README.md  RECOVERY.md  build.bat  config.toml  done.md  embed_manifest.bat  how-to-use.md
assets/: dashboard.html  diskspy.exe.manifest
src/: config.rs  db.rs  debouncer.rs  etw.rs  main.rs  process_cache.rs  server.rs  tray.rs
